M_F1_DDL/files/gen/DDLParser.java
// $ANTLR 3.0.1 /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3 2014-03-21 16:59:30

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class DDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LOG_CONJ", "ID", "CVALUE", "NUMBER", "COMPARATOR", "EXACTO", "APROXIMADO", "CHARACTERS", "BITS", "TIMES", "INTERVALS", "BINARIES", "SQUOTE", "WS", "ML_COMMENT", "OL_COMMENT", "'CREATE'", "'REPLACE'", "'TABLE'", "'('", "','", "')'", "'LOGGING'", "'NOCOMPRESS'", "'NOCACHE'", "'NOPARALLEL'", "'MONITORING'", "';'", "'COMMENT ON TABLE'", "'IS'", "'BYTE'", "'CONSTRAINT'", "'NULL'", "'NOT NULL'", "'DEFAULT'", "'COMMENT ON COLUMN'", "'\\.'", "'ALTER TABLE'", "'DROP CONSTRAINT'", "'CHECK'", "'FOREIGN KEY'", "'REFERENCES'", "'ON'", "'DELETE'", "'UPDATE'", "'CASCADE'", "'DISABLE'", "'PRIMARY KEY'", "'DATABASE'", "'SCHEMA'", "'IF NOT EXISTS'", "'CHARACTER'", "'SET'", "'COLLATE'", "'IN'"
    };
    public static final int BITS=12;
    public static final int APROXIMADO=10;
    public static final int NUMBER=7;
    public static final int OL_COMMENT=19;
    public static final int LOG_CONJ=4;
    public static final int SQUOTE=16;
    public static final int ID=5;
    public static final int EOF=-1;
    public static final int CVALUE=6;
    public static final int CHARACTERS=11;
    public static final int ML_COMMENT=18;
    public static final int INTERVALS=14;
    public static final int COMPARATOR=8;
    public static final int WS=17;
    public static final int BINARIES=15;
    public static final int TIMES=13;
    public static final int EXACTO=9;

        public DDLParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[85+1];
         }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("DDLParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3"; }


    public static class data_definition_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start data_definition
    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:18:1: data_definition returns [Node returnNode] : (data_definition_statementGen+= data_definition_statement )* ;
    public final data_definition_return data_definition() throws RecognitionException {
        data_definition_return retval = new data_definition_return();
        retval.start = input.LT(1);

        List list_data_definition_statementGen=null;
        RuleReturnScope data_definition_statementGen = null;
        try {
            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:19:1: ( (data_definition_statementGen+= data_definition_statement )* )
            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:19:4: (data_definition_statementGen+= data_definition_statement )*
            {
            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:19:4: (data_definition_statementGen+= data_definition_statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==20||LA1_0==32||LA1_0==39||LA1_0==41) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:19:5: data_definition_statementGen+= data_definition_statement
            	    {
            	    pushFollow(FOLLOW_data_definition_statement_in_data_definition48);
            	    data_definition_statementGen=data_definition_statement();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_data_definition_statementGen==null) list_data_definition_statementGen=new ArrayList();
            	    list_data_definition_statementGen.add(data_definition_statementGen);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            if ( backtracking==0 ) {
              
              		// Create return CST Node
              		Node data_definitionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		data_definitionReturnNode.setKind("data_definition");
              	    // Create a CST Node
              		if(list_data_definition_statementGen != null) {
              	        for(Iterator it = list_data_definition_statementGen.iterator(); it.hasNext(); )  { 
              	            DDLParser.data_definition_statement_return r = (DDLParser.data_definition_statement_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("data_definition_statement");
              	            	data_definitionReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = data_definitionReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end data_definition

    public static class data_definition_statement_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start data_definition_statement
    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint );
    public final data_definition_statement_return data_definition_statement() throws RecognitionException {
        data_definition_statement_return retval = new data_definition_statement_return();
        retval.start = input.LT(1);

        List list_databaseGen=null;
        List list_tableGen=null;
        List list_comment_tableGen=null;
        List list_comment_columnGen=null;
        List list_disabled_constraintGen=null;
        RuleReturnScope databaseGen = null;
        RuleReturnScope tableGen = null;
        RuleReturnScope comment_tableGen = null;
        RuleReturnScope comment_columnGen = null;
        RuleReturnScope disabled_constraintGen = null;
        try {
            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:40:1: (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint )
            int alt2=5;
            switch ( input.LA(1) ) {
            case 20:
                {
                int LA2_1 = input.LA(2);

                if ( ((LA2_1>=52 && LA2_1<=53)) ) {
                    alt2=1;
                }
                else if ( (LA2_1==LOG_CONJ||LA2_1==22) ) {
                    alt2=2;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint );", 2, 1, input);

                    throw nvae;
                }
                }
                break;
            case 32:
                {
                alt2=3;
                }
                break;
            case 39:
                {
                alt2=4;
                }
                break;
            case 41:
                {
                alt2=5;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint );", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:40:4: databaseGen+= database
                    {
                    pushFollow(FOLLOW_database_in_data_definition_statement73);
                    databaseGen=database();
                    _fsp--;
                    if (failed) return retval;
                    if (list_databaseGen==null) list_databaseGen=new ArrayList();
                    list_databaseGen.add(databaseGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_databaseGen != null) {
                      	        for(Iterator it = list_databaseGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.database_return r = (DDLParser.database_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("database");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 2 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:58:4: tableGen+= table
                    {
                    pushFollow(FOLLOW_table_in_data_definition_statement84);
                    tableGen=table();
                    _fsp--;
                    if (failed) return retval;
                    if (list_tableGen==null) list_tableGen=new ArrayList();
                    list_tableGen.add(tableGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_tableGen != null) {
                      	        for(Iterator it = list_tableGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.table_return r = (DDLParser.table_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("table");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 3 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:76:4: comment_tableGen+= comment_table
                    {
                    pushFollow(FOLLOW_comment_table_in_data_definition_statement95);
                    comment_tableGen=comment_table();
                    _fsp--;
                    if (failed) return retval;
                    if (list_comment_tableGen==null) list_comment_tableGen=new ArrayList();
                    list_comment_tableGen.add(comment_tableGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_comment_tableGen != null) {
                      	        for(Iterator it = list_comment_tableGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.comment_table_return r = (DDLParser.comment_table_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("comment_table");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 4 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:94:4: comment_columnGen+= comment_column
                    {
                    pushFollow(FOLLOW_comment_column_in_data_definition_statement106);
                    comment_columnGen=comment_column();
                    _fsp--;
                    if (failed) return retval;
                    if (list_comment_columnGen==null) list_comment_columnGen=new ArrayList();
                    list_comment_columnGen.add(comment_columnGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_comment_columnGen != null) {
                      	        for(Iterator it = list_comment_columnGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.comment_column_return r = (DDLParser.comment_column_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("comment_column");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 5 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:112:4: disabled_constraintGen+= disabled_constraint
                    {
                    pushFollow(FOLLOW_disabled_constraint_in_data_definition_statement117);
                    disabled_constraintGen=disabled_constraint();
                    _fsp--;
                    if (failed) return retval;
                    if (list_disabled_constraintGen==null) list_disabled_constraintGen=new ArrayList();
                    list_disabled_constraintGen.add(disabled_constraintGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_disabled_constraintGen != null) {
                      	        for(Iterator it = list_disabled_constraintGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.disabled_constraint_return r = (DDLParser.disabled_constraint_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("disabled_constraint");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end data_definition_statement

    public static class table_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start table
    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:132:1: table returns [Node returnNode] : TK_0= 'CREATE' (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (columnGen+= column )* (TK_4= ',' )? (ckGen+= ck (TK_5= ',' )? )* (pkGen+= pk )? (TK_6= ',' )? (fkGen+= fk (TK_7= ',' )? )* TK_8= ')' (TK_9= 'LOGGING' )? (TK_10= 'NOCOMPRESS' )? (TK_11= 'NOCACHE' )? (TK_12= 'NOPARALLEL' )? (TK_13= 'MONITORING' )? TK_14= ';' ;
    public final table_return table() throws RecognitionException {
        table_return retval = new table_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token LOG_CONJGen=null;
        Token TK_1=null;
        Token TK_2=null;
        Token IDGen=null;
        Token TK_3=null;
        Token TK_4=null;
        Token TK_5=null;
        Token TK_6=null;
        Token TK_7=null;
        Token TK_8=null;
        Token TK_9=null;
        Token TK_10=null;
        Token TK_11=null;
        Token TK_12=null;
        Token TK_13=null;
        Token TK_14=null;
        List list_columnGen=null;
        List list_ckGen=null;
        List list_pkGen=null;
        List list_fkGen=null;
        RuleReturnScope columnGen = null;
        RuleReturnScope ckGen = null;
        RuleReturnScope pkGen = null;
        RuleReturnScope fkGen = null;
        try {
            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:1: (TK_0= 'CREATE' (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (columnGen+= column )* (TK_4= ',' )? (ckGen+= ck (TK_5= ',' )? )* (pkGen+= pk )? (TK_6= ',' )? (fkGen+= fk (TK_7= ',' )? )* TK_8= ')' (TK_9= 'LOGGING' )? (TK_10= 'NOCOMPRESS' )? (TK_11= 'NOCACHE' )? (TK_12= 'NOPARALLEL' )? (TK_13= 'MONITORING' )? TK_14= ';' )
            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:3: TK_0= 'CREATE' (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (columnGen+= column )* (TK_4= ',' )? (ckGen+= ck (TK_5= ',' )? )* (pkGen+= pk )? (TK_6= ',' )? (fkGen+= fk (TK_7= ',' )? )* TK_8= ')' (TK_9= 'LOGGING' )? (TK_10= 'NOCOMPRESS' )? (TK_11= 'NOCACHE' )? (TK_12= 'NOPARALLEL' )? (TK_13= 'MONITORING' )? TK_14= ';'
            {
            TK_0=(Token)input.LT(1);
            match(input,20,FOLLOW_20_in_table138); if (failed) return retval;
            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:17: (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==LOG_CONJ) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:18: LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE'
                    {
                    LOG_CONJGen=(Token)input.LT(1);
                    match(input,LOG_CONJ,FOLLOW_LOG_CONJ_in_table143); if (failed) return retval;
                    TK_1=(Token)input.LT(1);
                    match(input,21,FOLLOW_21_in_table147); if (failed) return retval;

                    }
                    break;

            }

            TK_2=(Token)input.LT(1);
            match(input,22,FOLLOW_22_in_table153); if (failed) return retval;
            IDGen=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_table157); if (failed) return retval;
            TK_3=(Token)input.LT(1);
            match(input,23,FOLLOW_23_in_table161); if (failed) return retval;
            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:87: (columnGen+= column )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:88: columnGen+= column
            	    {
            	    pushFollow(FOLLOW_column_in_table166);
            	    columnGen=column();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_columnGen==null) list_columnGen=new ArrayList();
            	    list_columnGen.add(columnGen);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:108: (TK_4= ',' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==24) ) {
                int LA5_1 = input.LA(2);

                if ( (synpred8()) ) {
                    alt5=1;
                }
            }
            switch (alt5) {
                case 1 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:109: TK_4= ','
                    {
                    TK_4=(Token)input.LT(1);
                    match(input,24,FOLLOW_24_in_table173); if (failed) return retval;

                    }
                    break;

            }

            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:120: (ckGen+= ck (TK_5= ',' )? )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==35) ) {
                    int LA7_1 = input.LA(2);

                    if ( (LA7_1==ID) ) {
                        int LA7_3 = input.LA(3);

                        if ( (LA7_3==43) ) {
                            alt7=1;
                        }


                    }


                }


                switch (alt7) {
            	case 1 :
            	    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:121: ckGen+= ck (TK_5= ',' )?
            	    {
            	    pushFollow(FOLLOW_ck_in_table180);
            	    ckGen=ck();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_ckGen==null) list_ckGen=new ArrayList();
            	    list_ckGen.add(ckGen);

            	    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:131: (TK_5= ',' )?
            	    int alt6=2;
            	    int LA6_0 = input.LA(1);

            	    if ( (LA6_0==24) ) {
            	        int LA6_1 = input.LA(2);

            	        if ( (synpred9()) ) {
            	            alt6=1;
            	        }
            	    }
            	    switch (alt6) {
            	        case 1 :
            	            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:132: TK_5= ','
            	            {
            	            TK_5=(Token)input.LT(1);
            	            match(input,24,FOLLOW_24_in_table185); if (failed) return retval;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:145: (pkGen+= pk )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==35) ) {
                int LA8_1 = input.LA(2);

                if ( (LA8_1==ID) ) {
                    int LA8_3 = input.LA(3);

                    if ( (LA8_3==51) ) {
                        alt8=1;
                    }
                }
            }
            switch (alt8) {
                case 1 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:146: pkGen+= pk
                    {
                    pushFollow(FOLLOW_pk_in_table194);
                    pkGen=pk();
                    _fsp--;
                    if (failed) return retval;
                    if (list_pkGen==null) list_pkGen=new ArrayList();
                    list_pkGen.add(pkGen);


                    }
                    break;

            }

            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:158: (TK_6= ',' )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==24) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:159: TK_6= ','
                    {
                    TK_6=(Token)input.LT(1);
                    match(input,24,FOLLOW_24_in_table201); if (failed) return retval;

                    }
                    break;

            }

            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:170: (fkGen+= fk (TK_7= ',' )? )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==35) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:171: fkGen+= fk (TK_7= ',' )?
            	    {
            	    pushFollow(FOLLOW_fk_in_table208);
            	    fkGen=fk();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_fkGen==null) list_fkGen=new ArrayList();
            	    list_fkGen.add(fkGen);

            	    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:181: (TK_7= ',' )?
            	    int alt10=2;
            	    int LA10_0 = input.LA(1);

            	    if ( (LA10_0==24) ) {
            	        alt10=1;
            	    }
            	    switch (alt10) {
            	        case 1 :
            	            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:182: TK_7= ','
            	            {
            	            TK_7=(Token)input.LT(1);
            	            match(input,24,FOLLOW_24_in_table213); if (failed) return retval;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);

            TK_8=(Token)input.LT(1);
            match(input,25,FOLLOW_25_in_table221); if (failed) return retval;
            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:204: (TK_9= 'LOGGING' )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==26) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:205: TK_9= 'LOGGING'
                    {
                    TK_9=(Token)input.LT(1);
                    match(input,26,FOLLOW_26_in_table226); if (failed) return retval;

                    }
                    break;

            }

            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:222: (TK_10= 'NOCOMPRESS' )?
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==27) ) {
                alt13=1;
            }
            switch (alt13) {
                case 1 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:223: TK_10= 'NOCOMPRESS'
                    {
                    TK_10=(Token)input.LT(1);
                    match(input,27,FOLLOW_27_in_table233); if (failed) return retval;

                    }
                    break;

            }

            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:244: (TK_11= 'NOCACHE' )?
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==28) ) {
                alt14=1;
            }
            switch (alt14) {
                case 1 :
                    // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:245: TK_11= 'NOCACHE'
                    {
                    TK_11=(Token)input.LT(1);
                    match(input,28,FOLLOW_28_in_table240); if (failed) return retval;

                    }
                    break;

            }

            // /Users/fjavier/Copy/workspace/M_F1_DDL/files/gen/DDL.ge3:133:263: (TK_12= 'NOPARALLEL' )?
            int alt15=2;
            int LA15_0 = input.LA(1);
